--- a/delivery.html
+++ b/delivery.html
@@ -1,21 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Delivery Portal | Chat Point</title>
-
-  <!-- ==== LOCAL SVG ICON SPRITE ==== -->
   <style>
     #icon-sprite { display:none; }
     .icon { width:1.2em; height:1.2em; fill:currentColor; vertical-align:-0.125em; }
   </style>
-
-  <!-- ==== DARK THEME + FAST UI STYLES ==== -->
   <style>
     *,*::before,*::after{box-sizing:border-box;margin:0;padding:0;}
-    
     :root {
       --bg: #0f172a;
       --card-bg: #1e293b;
@@ -26,8 +20,9 @@
       --success: #10b981;
       --danger: #ef4444;
       --warning: #f59e0b;
+      --confirmed: #1e40af;
+      --confirmed-light: #93c5fd;
     }
-
     body {
       font-family: system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
       background: var(--bg);
@@ -36,20 +31,16 @@
       min-height: 100vh;
       overflow: hidden;
     }
-
     .container { max-width: 1200px; margin: auto; padding: 1rem; position: relative; }
-
     .header {
       display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem;
     }
-
     .logout-btn {
       background: var(--danger); color: white; padding: .5rem 1rem;
       border: none; border-radius: .5rem; font-weight: 600; cursor: pointer;
       display: flex; align-items: center; gap: .4rem; font-size: .9rem;
     }
     .logout-btn:hover { background: #dc2626; }
-
     .card {
       background: var(--card-bg);
       border-radius: 0.75rem;
@@ -60,7 +51,6 @@
       transition: transform .15s ease, box-shadow .15s ease;
     }
     .card:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,.4); }
-
     .btn {
       display: inline-flex; align-items: center; gap: .4rem;
       padding: .5rem 1rem; border: none; border-radius: .5rem;
@@ -73,15 +63,14 @@
     .btn-success:hover { background: #059669; }
     .btn-danger { background: var(--danger); color: white; }
     .btn-danger:hover { background: #dc2626; }
-
     .badge {
       display: inline-block; padding: .25rem .6rem; font-size: .75rem;
       border-radius: .375rem; font-weight: 600;
     }
     .badge-pending { background: #451a03; color: #fcd34d; }
+    .badge-confirmed { background: var(--confirmed); color: var(--confirmed-light); }
     .badge-delivered { background: #064e3b; color: #6ee7b7; }
     .badge-cancelled { background: #7f1d1d; color: #fca5a5; }
-
     .loader {
       border: 4px solid #1e293b;
       border-top: 4px solid var(--primary);
@@ -89,24 +78,20 @@
       animation: spin 1s linear infinite; margin: auto;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
-
     .empty { text-align:center; color: var(--text-muted); margin:3rem 0; }
     .empty svg { width:3rem; height:3rem; opacity:.3; margin-bottom:.5rem; }
-
     h1 { font-size: 1.75rem; font-weight: 700; display:flex; align-items:center; gap:.5rem; }
     h1 svg { color: var(--primary); }
-
     .text-sm { font-size: .875rem; }
     .text-xs { font-size: .75rem; }
     .font-medium { font-weight: 500; }
     .font-bold { font-weight: 700; }
     .text-gray-500 { color: var(--text-muted); }
     .text-red-600 { color: #fca5a5; }
+    .hidden { display: none !important; }
   </style>
 </head>
-
 <body>
-  <!-- ==== ICON SPRITE ==== -->
   <svg id="icon-sprite" xmlns="http://www.w3.org/2000/svg">
     <symbol id="i-truck" viewBox="0 0 24 24"><path d="M18 7h-3V4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h1.5a2.5 2.5 0 0 0 5 0h3a2.5 2.5 0 0 0 5 0H21a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1zm-2 9h-2v-2h2v2zm-5 0h-2v-2h2v2zm-5 0H4V9h2v7zm0-9H4V5h2v3zm5 0H9V5h2v3zm5 0h-2V5h2v3z"/></symbol>
     <symbol id="i-check" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></symbol>
@@ -117,9 +102,7 @@
 
   <div class="container">
     <div class="header">
-      <h1>
-        <svg class="icon"><use href="#i-truck"/></svg> Delivery Portal
-      </h1>
+      <h1><svg class="icon"><use href="#i-truck"/></svg> Delivery Portal</h1>
       <button id="logoutBtn" class="logout-btn">
         <svg class="icon"><use href="#i-logout"/></svg> Logout
       </button>
@@ -132,17 +115,15 @@
 
     <div id="orders-container"></div>
 
-    <div id="empty" class="empty">
+    <div id="empty" class="empty hidden">
       <svg class="icon"><use href="#i-truck"/></svg>
       <p>No pending orders at the moment.</p>
     </div>
   </div>
 
-  <!-- ==== YOUR RINGTONE.MP3 ==== -->
   <audio id="notificationSound" src="ringtone.mp3" preload="auto"></audio>
 
   <script>
-    /* ==== CONFIG ==== */
     const API_BASE = window.location.origin;
     const CACHE_KEY = 'delivery-orders-cache';
     const POLL_MS = 30_000;
@@ -150,18 +131,14 @@
     let lastOrderIds = new Set();
 
     const $ = (s) => document.querySelector(s);
-    const $$ = (s) => document.querySelectorAll(s);
-
     const ordersContainer = $('#orders-container');
-    const loadingEl       = $('#loading');
-    const emptyEl         = $('#empty');
-    const sound           = $('#notificationSound');  // RESTORED
-    const logoutBtn       = $('#logoutBtn');
+    const loadingEl = $('#loading');
+    const emptyEl = $('#empty');
+    const sound = $('#notificationSound');
+    const logoutBtn = $('#logoutBtn');
 
-    /* ==== ICON HELPERS ==== */
     const icon = (name) => `<svg class="icon"><use href="#i-${name}"/></svg>`;
 
-    /* ==== CACHE ==== */
     const getCache = () => {
       try { return JSON.parse(localStorage.getItem(CACHE_KEY)); }
       catch { return null; }
@@ -171,7 +148,6 @@
       catch (e) { console.warn('Cache write failed', e); }
     };
 
-    /* ==== RENDER ONE CARD ==== */
     const renderCard = (order) => {
       const itemsHtml = order.items.map(it => `
         <div class="flex justify-between text-sm text-gray-300">
@@ -180,23 +156,39 @@
         </div>`).join('');
 
       const badge = {
-        pending:   '<span class="badge badge-pending">Pending</span>',
+        pending: '<span class="badge badge-pending">Pending</span>',
+        confirmed: '<span class="badge badge-confirmed">Confirmed</span>',
         delivered: '<span class="badge badge-delivered">Delivered</span>',
         cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
       }[order.status] || '<span class="badge badge-pending">Pending</span>';
 
-      const actions = order.status === 'pending' ? `
-        <div class="flex gap-2 mt-3">
-          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
-            ${icon('check')} Delivered
-          </button>
-          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
-            ${icon('times')} Cancel
-          </button>
-        </div>` : '';
+      let actions = '';
+      if (order.status === 'pending') {
+        actions = `
+          <div class="flex gap-2 mt-3 flex-wrap">
+            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">
+              ${icon('check')} Confirm Order
+            </button>
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
+              ${icon('check')} Delivered
+            </button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
+              ${icon('times')} Cancel
+            </button>
+          </div>`;
+      } else if (order.status === 'confirmed') {
+        actions = `
+          <div class="flex gap-2 mt-3 flex-wrap">
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
+              ${icon('check')} Delivered
+            </button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
+              ${icon('times')} Cancel
+            </button>
+          </div>`;
+      }
 
       const grandTotal = order.totalAmount.toFixed(2);
-
       return `
         <div class="card" data-id="${order._id}">
           <div class="flex justify-between items-start mb-3">
@@ -206,13 +198,11 @@
             </div>
             <div>${badge}</div>
           </div>
-
           <div class="mb-4 space-y-1">
             <p><strong>Customer:</strong> ${order.user.name} (${order.user.phone})</p>
             <p><strong>Address:</strong> ${order.address.line1}${order.address.line2 ? ', '+order.address.line2 : ''}</p>
             <p><strong>Shop:</strong> ${order.shop}</p>
           </div>
-
           <div class="mb-4 space-y-1">
             ${itemsHtml}
             <div class="flex justify-between font-bold text-xl mt-2 text-white">
@@ -220,22 +210,20 @@
               <span>₹${grandTotal}</span>
             </div>
           </div>
-
           ${actions}
         </div>`;
     };
 
-    /* ==== RENDER ALL / UPDATE ONE ==== */
     const renderAll = (orders) => {
       ordersContainer.innerHTML = orders.map(renderCard).join('');
     };
+
     const updateCard = (order) => {
       const el = ordersContainer.querySelector(`[data-id="${order._id}"]`);
       if (el) el.outerHTML = renderCard(order);
       else ordersContainer.insertAdjacentHTML('beforeend', renderCard(order));
     };
 
-    /* ==== FETCH ORDERS + PLAY ringtone.mp3 ON NEW ORDER ==== */
     const fetchOrders = async (useCache = true) => {
       if (useCache) {
         const cached = getCache();
@@ -248,10 +236,8 @@
 
       try {
         loadingEl.classList.remove('hidden');
-        const url = `${API_BASE}/api/delivery-orders?limit=${PAGE_SIZE}`;
-        const res = await fetch(url, { cache: 'no-store' });
+        const res = await fetch(`${API_BASE}/api/delivery-orders?limit=${PAGE_SIZE}`, { cache: 'no-store' });
         const payload = await res.json();
-
         loadingEl.classList.add('hidden');
 
         if (!payload.success || !payload.orders?.length) {
@@ -263,16 +249,10 @@
         }
 
         emptyEl.classList.add('hidden');
-
-        // Detect NEW orders
         const newOrders = payload.orders.filter(o => !lastOrderIds.has(o._id));
         if (newOrders.length > 0 && !useCache) {
-          // PLAY YOUR ringtone.mp3
           sound.currentTime = 0;
-          sound.play().catch(() => {
-            console.log("Sound blocked – needs user interaction");
-            alert(`New Order! ${newOrders.length} new order(s)`);
-          });
+          sound.play().catch(() => alert(`New Order! ${newOrders.length} new order(s)`));
         }
 
         renderAll(payload.orders);
@@ -287,7 +267,6 @@
       }
     };
 
-    /* ==== STATUS UPDATE (OPTIMISTIC) ==== */
     ordersContainer.addEventListener('click', async (e) => {
       const btn = e.target.closest('button[data-action]');
       if (!btn) return;
@@ -299,12 +278,6 @@
 
       btn.disabled = true;
       btn.innerHTML = `${icon('refresh')} Updating…`;
-
-      const badgeEl = card.querySelector('.badge');
-      const badgeMap = { delivered: 'badge-delivered', cancelled: 'badge-cancelled' };
-      badgeEl.className = `badge ${badgeMap[newStatus] || 'badge-pending'}`;
-      badgeEl.textContent = newStatus.charAt(0).toUpperCase() + newStatus.slice(1);
-      card.querySelector('.flex.gap-2')?.remove();
 
       try {
         const res = await fetch(`${API_BASE}/api/update-order-status`, {
@@ -328,7 +301,6 @@
       }
     });
 
-    /* ==== LOGOUT ==== */
     logoutBtn.addEventListener('click', () => {
       if (confirm('Are you sure you want to log out?')) {
         localStorage.clear();
@@ -336,13 +308,9 @@
       }
     });
 
-    /* ==== PREVENT BACK BUTTON & LOCK PAGE ==== */
     history.pushState(null, null, location.href);
-    window.onpopstate = () => {
-      history.go(1);
-    };
+    window.onpopstate = () => history.go(1);
 
-    /* ==== STARTUP + POLLING ==== */
     document.addEventListener('DOMContentLoaded', () => {
       fetchOrders(true);
       setInterval(() => fetchOrders(false), POLL_MS);
