--- a/delivery.html
+++ b/delivery.html
@@ -29,11 +29,10 @@
       color: var(--text);
       line-height: 1.5;
       min-height: 100vh;
-      overflow: hidden;
     }
-    .container { max-width: 1200px; margin: auto; padding: 1rem; position: relative; }
+    .container { max-width: 1200px; margin: auto; padding: 1rem; }
     .header {
-      display: flex; justify-content: space-between; align-items: center; margin-bottom: 1.5rem;
+      display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;
     }
     .logout-btn {
       background: var(--danger); color: white; padding: .5rem 1rem;
@@ -41,21 +40,34 @@
       display: flex; align-items: center; gap: .4rem; font-size: .9rem;
     }
     .logout-btn:hover { background: #dc2626; }
+
+    /* FILTER BUTTONS */
+    .filter-tabs {
+      display: flex; gap: 1rem; margin-bottom: 1.5rem; flex-wrap: wrap;
+      border-bottom: 2px solid var(--border);
+      padding-bottom: .5rem;
+    }
+    .filter-btn {
+      padding: .6rem 1.2rem; border: none; border-radius: .5rem;
+      background: #334155; color: var(--text-muted); font-weight: 600;
+      cursor: pointer; transition: all .2s; font-size: .95rem;
+    }
+    .filter-btn.active {
+      background: var(--primary); color: white;
+    }
+    .filter-btn:hover:not(.active) { background: #475569; }
+
     .card {
-      background: var(--card-bg);
-      border-radius: 0.75rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,.3);
-      padding: 1.5rem;
-      margin-bottom: 1rem;
-      border: 1px solid var(--border);
+      background: var(--card-bg); border-radius: 0.75rem;
+      box-shadow: 0 4px 12px rgba(0,0,0,.3); padding: 1.5rem;
+      margin-bottom: 1rem; border: 1px solid var(--border);
       transition: transform .15s ease, box-shadow .15s ease;
     }
     .card:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,.4); }
-    .btn {
-      display: inline-flex; align-items: center; gap: .4rem;
-      padding: .5rem 1rem; border: none; border-radius: .5rem;
-      font-weight: 600; cursor: pointer; font-size: .9rem;
-      transition: all .2s ease;
+
+    .btn { display: inline-flex; align-items: center; gap: .4rem; padding: .5rem 1rem;
+      border: none; border-radius: .5rem; font-weight: 600; cursor: pointer;
+      font-size: .9rem; transition: all .2s ease;
     }
     .btn-primary { background: var(--primary); color: white; }
     .btn-primary:hover { background: #2563eb; }
@@ -63,6 +75,7 @@
     .btn-success:hover { background: #059669; }
     .btn-danger { background: var(--danger); color: white; }
     .btn-danger:hover { background: #dc2626; }
+
     .badge {
       display: inline-block; padding: .25rem .6rem; font-size: .75rem;
       border-radius: .375rem; font-weight: 600;
@@ -71,27 +84,24 @@
     .badge-confirmed { background: var(--confirmed); color: var(--confirmed-light); }
     .badge-delivered { background: #064e3b; color: #6ee7b7; }
     .badge-cancelled { background: #7f1d1d; color: #fca5a5; }
+
     .loader {
-      border: 4px solid #1e293b;
-      border-top: 4px solid var(--primary);
+      border: 4px solid #1e293b; border-top: 4px solid var(--primary);
       border-radius: 50%; width: 2.5rem; height: 2.5rem;
       animation: spin 1s linear infinite; margin: auto;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
-    .empty { text-align:center; color: var(--text-muted); margin:3rem 0; }
+
+    .empty { text-align:center; color: var(--text-muted); margin:3rem 0; padding: 2rem; }
     .empty svg { width:3rem; height:3rem; opacity:.3; margin-bottom:.5rem; }
+
     h1 { font-size: 1.75rem; font-weight: 700; display:flex; align-items:center; gap:.5rem; }
     h1 svg { color: var(--primary); }
-    .text-sm { font-size: .875rem; }
-    .text-xs { font-size: .75rem; }
-    .font-medium { font-weight: 500; }
-    .font-bold { font-weight: 700; }
-    .text-gray-500 { color: var(--text-muted); }
-    .text-red-600 { color: #fca5a5; }
     .hidden { display: none !important; }
   </style>
 </head>
 <body>
+
   <svg id="icon-sprite" xmlns="http://www.w3.org/2000/svg">
     <symbol id="i-truck" viewBox="0 0 24 24"><path d="M18 7h-3V4a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h1.5a2.5 2.5 0 0 0 5 0h3a2.5 2.5 0 0 0 5 0H21a1 1 0 0 0 1-1V8a1 1 0 0 0-1-1zm-2 9h-2v-2h2v2zm-5 0h-2v-2h2v2zm-5 0H4V9h2v7zm0-9H4V5h2v3zm5 0H9V5h2v3zm5 0h-2V5h2v3z"/></symbol>
     <symbol id="i-check" viewBox="0 0 24 24"><path d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"/></symbol>
@@ -102,10 +112,16 @@
 
   <div class="container">
     <div class="header">
-      <h1><svg class="icon"><use href="#i-truck"/></svg> Delivery Portal</h1>
-      <button id="logoutBtn" class="logout-btn">
-        <svg class="icon"><use href="#i-logout"/></svg> Logout
-      </button>
+      <h1>Delivery Portal</h1>
+      <button id="logoutBtn" class="logout-btn">Logout</button>
+    </div>
+
+    <!-- FILTER BUTTONS -->
+    <div class="filter-tabs">
+      <button class="filter-btn active" data-filter="active">Active Orders</button>
+      <button class="filter-btn" data-filter="delivered">Delivered</button>
+      <button class="filter-btn" data-filter="cancelled">Cancelled</button>
+      <button class="filter-btn" data-filter="all">All Orders</button>
     </div>
 
     <div id="loading" class="card text-center py-10">
@@ -117,7 +133,7 @@
 
     <div id="empty" class="empty hidden">
       <svg class="icon"><use href="#i-truck"/></svg>
-      <p>No pending orders at the moment.</p>
+      <p>No orders in this category.</p>
     </div>
   </div>
 
@@ -125,159 +141,139 @@
 
   <script>
     const API_BASE = window.location.origin;
-    const CACHE_KEY = 'delivery-orders-cache';
     const POLL_MS = 30_000;
-    const PAGE_SIZE = 50;
-    let lastOrderIds = new Set();
+    let allOrders = [];
+    let currentFilter = 'active';
 
-    const $ = (s) => document.querySelector(s);
+    const $ = s => document.querySelector(s);
+    const $$ = s => document.querySelectorAll(s);
     const ordersContainer = $('#orders-container');
     const loadingEl = $('#loading');
     const emptyEl = $('#empty');
     const sound = $('#notificationSound');
-    const logoutBtn = $('#logoutBtn');
 
-    const icon = (name) => `<svg class="icon"><use href="#i-${name}"/></svg>`;
+    const icon = name => `<svg class="icon"><use href="#i-${name}"/></svg>`;
 
-    const getCache = () => {
-      try { return JSON.parse(localStorage.getItem(CACHE_KEY)); }
-      catch { return null; }
-    };
-    const setCache = (data) => {
-      try { localStorage.setItem(CACHE_KEY, JSON.stringify(data)); }
-      catch (e) { console.warn('Cache write failed', e); }
-    };
+    const badge = status => ({
+      pending: '<span class="badge badge-pending">Pending</span>',
+      confirmed: '<span class="badge badge-confirmed">Confirmed</span>',
+      delivered: '<span class="badge badge-delivered">Delivered</span>',
+      cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
+    }[status] || '<span class="badge badge-pending">Pending</span>');
 
-    const renderCard = (order) => {
-      const itemsHtml = order.items.map(it => `
+    const renderCard = order => {
+      const itemsHtml = order.items.map(i => `
         <div class="flex justify-between text-sm text-gray-300">
-          <span>${it.name} × ${it.quantity}</span>
-          <span>₹${(it.price * it.quantity).toFixed(2)}</span>
+          <span>${i.name} × ${i.quantity}</span>
+          <span>₹${(i.price * i.quantity).toFixed(2)}</span>
         </div>`).join('');
-
-      const badge = {
-        pending: '<span class="badge badge-pending">Pending</span>',
-        confirmed: '<span class="badge badge-confirmed">Confirmed</span>',
-        delivered: '<span class="badge badge-delivered">Delivered</span>',
-        cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
-      }[order.status] || '<span class="badge badge-pending">Pending</span>';
 
       let actions = '';
       if (order.status === 'pending') {
-        actions = `
-          <div class="flex gap-2 mt-3 flex-wrap">
-            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">
-              ${icon('check')} Confirm Order
-            </button>
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
-              ${icon('check')} Delivered
-            </button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
-              ${icon('times')} Cancel
-            </button>
-          </div>`;
+        actions = `<div class="flex gap-2 mt-3 flex-wrap">
+          <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
+          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
+        </div>`;
       } else if (order.status === 'confirmed') {
-        actions = `
-          <div class="flex gap-2 mt-3 flex-wrap">
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
-              ${icon('check')} Delivered
-            </button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
-              ${icon('times')} Cancel
-            </button>
-          </div>`;
+        actions = `<div class="flex gap-2 mt-3 flex-wrap">
+          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
+        </div>`;
       }
 
-      const grandTotal = order.totalAmount.toFixed(2);
       return `
-        <div class="card" data-id="${order._id}">
+        <div class="card" data-status="${order.status}" data-id="${order._id}">
           <div class="flex justify-between items-start mb-3">
             <div>
               <strong class="text-lg">Order #${order._id.slice(-6)}</strong>
               <span class="ml-2 text-xs text-gray-500">${new Date(order.date).toLocaleString()}</span>
             </div>
-            <div>${badge}</div>
+            <div>${badge(order.status)}</div>
           </div>
           <div class="mb-4 space-y-1">
             <p><strong>Customer:</strong> ${order.user.name} (${order.user.phone})</p>
             <p><strong>Address:</strong> ${order.address.line1}${order.address.line2 ? ', '+order.address.line2 : ''}</p>
             <p><strong>Shop:</strong> ${order.shop}</p>
           </div>
-          <div class="mb-4 space-y-1">
-            ${itemsHtml}
+          <div class="mb-4 space-y-1">${itemsHtml}
             <div class="flex justify-between font-bold text-xl mt-2 text-white">
               <span>Grand Total</span>
-              <span>₹${grandTotal}</span>
+              <span>₹${order.totalAmount.toFixed(2)}</span>
             </div>
           </div>
           ${actions}
         </div>`;
     };
 
-    const renderAll = (orders) => {
-      ordersContainer.innerHTML = orders.map(renderCard).join('');
+    const applyFilter = () => {
+      const cards = $$('.card');
+      let visible = 0;
+
+      cards.forEach(card => {
+        const status = card.dataset.status;
+        let show = false;
+
+        if (currentFilter === 'active') show = ['pending', 'confirmed'].includes(status);
+        else if (currentFilter === 'delivered') show = status === 'delivered';
+        else if (currentFilter === 'cancelled') show = status === 'cancelled';
+        else show = true; // all
+
+        card.style.display = show ? '' : 'none';
+        if (show) visible++;
+      });
+
+      emptyEl.classList.toggle('hidden', visible > 0);
     };
 
-    const updateCard = (order) => {
-      const el = ordersContainer.querySelector(`[data-id="${order._id}"]`);
-      if (el) el.outerHTML = renderCard(order);
-      else ordersContainer.insertAdjacentHTML('beforeend', renderCard(order));
+    const renderAll = () => {
+      ordersContainer.innerHTML = allOrders.map(renderCard).join('');
+      applyFilter();
     };
 
-    const fetchOrders = async (useCache = true) => {
-      if (useCache) {
-        const cached = getCache();
-        if (cached?.orders?.length) {
-          emptyEl.classList.add('hidden');
-          renderAll(cached.orders);
-          lastOrderIds = new Set(cached.orders.map(o => o._id));
-        }
-      }
-
+    const fetchAllOrders = async () => {
       try {
         loadingEl.classList.remove('hidden');
-        const res = await fetch(`${API_BASE}/api/delivery-orders?limit=${PAGE_SIZE}`, { cache: 'no-store' });
-        const payload = await res.json();
+        const res = await fetch(`${API_BASE}/api/delivery-orders?limit=500`, { cache: 'no-store' });
+        const data = await res.json();
         loadingEl.classList.add('hidden');
 
-        if (!payload.success || !payload.orders?.length) {
-          emptyEl.classList.remove('hidden');
-          ordersContainer.innerHTML = '';
-          setCache(payload);
-          lastOrderIds.clear();
-          return;
-        }
+        if (data.success && data.orders) {
+          allOrders = data.orders;
+          renderAll();
 
-        emptyEl.classList.add('hidden');
-        const newOrders = payload.orders.filter(o => !lastOrderIds.has(o._id));
-        if (newOrders.length > 0 && !useCache) {
-          sound.currentTime = 0;
-          sound.play().catch(() => alert(`New Order! ${newOrders.length} new order(s)`));
+          // Play sound only for new pending orders
+          const newPending = data.orders.filter(o => o.status === 'pending');
+          if (newPending.length > 0) {
+            sound.currentTime = 0;
+            sound.play().catch(() => {});
+          }
         }
-
-        renderAll(payload.orders);
-        setCache(payload);
-        lastOrderIds = new Set(payload.orders.map(o => o._id));
       } catch (e) {
         console.error(e);
         loadingEl.classList.add('hidden');
-        if (!getCache()) {
-          ordersContainer.innerHTML = `<div class="card text-red-600">Network error – using offline cache…</div>`;
-        }
       }
     };
 
-    ordersContainer.addEventListener('click', async (e) => {
+    // Filter button click
+    document.querySelectorAll('.filter-btn').forEach(btn => {
+      btn.addEventListener('click', () => {
+        document.querySelector('.filter-btn.active')?.classList.remove('active');
+        btn.classList.add('active');
+        currentFilter = btn.dataset.filter;
+        applyFilter();
+      });
+    });
+
+    // Status update
+    ordersContainer.addEventListener('click', async e => {
       const btn = e.target.closest('button[data-action]');
       if (!btn) return;
 
       const orderId = btn.dataset.id;
       const newStatus = btn.dataset.action;
-      const card = btn.closest('.card');
-      const oldHTML = btn.innerHTML;
-
       btn.disabled = true;
-      btn.innerHTML = `${icon('refresh')} Updating…`;
+      btn.innerHTML = 'Updating…';
 
       try {
         const res = await fetch(`${API_BASE}/api/update-order-status`, {
@@ -287,34 +283,29 @@
         });
         const data = await res.json();
 
-        if (data.success && data.order) {
-          updateCard(data.order);
-        } else {
-          throw new Error(data.message || 'Update failed');
+        if (data.success) {
+          const order = data.order;
+          const index = allOrders.findIndex(o => o._id === order._id);
+          if (index !== -1) allOrders[index] = order;
+          renderAll();
         }
       } catch (err) {
-        console.error(err);
-        alert('Update failed – reverting');
-        btn.innerHTML = oldHTML;
+        alert('Update failed');
         btn.disabled = false;
-        fetchOrders(false);
+        btn.innerHTML = btn.textContent.trim();
       }
     });
 
-    logoutBtn.addEventListener('click', () => {
-      if (confirm('Are you sure you want to log out?')) {
+    $('#logoutBtn').addEventListener('click', () => {
+      if (confirm('Logout?')) {
         localStorage.clear();
-        window.location.href = 'login.html';
+        location.href = 'login.html';
       }
     });
 
-    history.pushState(null, null, location.href);
-    window.onpopstate = () => history.go(1);
-
-    document.addEventListener('DOMContentLoaded', () => {
-      fetchOrders(true);
-      setInterval(() => fetchOrders(false), POLL_MS);
-    });
+    // Start
+    fetchAllOrders();
+    setInterval(fetchAllOrders, POLL_MS);
   </script>
 </body>
 </html>
