--- a/delivery.html
+++ b/delivery.html
@@ -19,7 +19,6 @@
       --primary: #3b82f6;
       --success: #10b981;
       --danger: #ef4444;
-      --warning: #f59e0b;
       --confirmed: #1e40af;
       --confirmed-light: #93c5fd;
     }
@@ -41,14 +40,13 @@
     }
     .logout-btn:hover { background: #dc2626; }
 
-    /* FILTER BUTTONS */
+    /* FILTER TABS */
     .filter-tabs {
-      display: flex; gap: 1rem; margin-bottom: 1.5rem; flex-wrap: wrap;
-      border-bottom: 2px solid var(--border);
-      padding-bottom: .5rem;
+      display: flex; gap: .8rem; margin-bottom: 1.5rem; flex-wrap: wrap;
+      border-bottom: 2px solid var(--border); padding-bottom: .5rem;
     }
     .filter-btn {
-      padding: .6rem 1.2rem; border: none; border-radius: .5rem;
+      padding: .6rem 1.3rem; border: none; border-radius: .5rem;
       background: #334155; color: var(--text-muted); font-weight: 600;
       cursor: pointer; transition: all .2s; font-size: .95rem;
     }
@@ -61,7 +59,7 @@
       background: var(--card-bg); border-radius: 0.75rem;
       box-shadow: 0 4px 12px rgba(0,0,0,.3); padding: 1.5rem;
       margin-bottom: 1rem; border: 1px solid var(--border);
-      transition: transform .15s ease, box-shadow .15s ease;
+      transition: all .15s ease;
     }
     .card:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,.4); }
 
@@ -93,7 +91,7 @@
     @keyframes spin { to { transform: rotate(360deg); } }
 
     .empty { text-align:center; color: var(--text-muted); margin:3rem 0; padding: 2rem; }
-    .empty svg { width:3rem; height:3rem; opacity:.3; margin-bottom:.5rem; }
+    .empty svg { width:3.5rem; height:3.5rem; opacity:.3; margin-bottom:.5rem; }
 
     h1 { font-size: 1.75rem; font-weight: 700; display:flex; align-items:center; gap:.5rem; }
     h1 svg { color: var(--primary); }
@@ -112,11 +110,13 @@
 
   <div class="container">
     <div class="header">
-      <h1>Delivery Portal</h1>
-      <button id="logoutBtn" class="logout-btn">Logout</button>
+      <h1><svg class="icon"><use href="#i-truck"/></svg> Delivery Portal</h1>
+      <button id="logoutBtn" class="logout-btn">
+        <svg class="icon"><use href="#i-logout"/></svg> Logout
+      </button>
     </div>
 
-    <!-- FILTER BUTTONS -->
+    <!-- 4 FILTER BUTTONS -->
     <div class="filter-tabs">
       <button class="filter-btn active" data-filter="active">Active Orders</button>
       <button class="filter-btn" data-filter="delivered">Delivered</button>
@@ -126,7 +126,7 @@
 
     <div id="loading" class="card text-center py-10">
       <div class="loader"></div>
-      <p class="mt-3 text-gray-500">Loading orders…</p>
+      <p class="mt-3 text-gray-500">Loading all orders…</p>
     </div>
 
     <div id="orders-container"></div>
@@ -170,16 +170,28 @@
 
       let actions = '';
       if (order.status === 'pending') {
-        actions = `<div class="flex gap-2 mt-3 flex-wrap">
-          <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
-          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
-          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
-        </div>`;
+        actions = `
+          <div class="flex gap-2 mt-3 flex-wrap">
+            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">
+              ${icon('check')} Confirm
+            </button>
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
+              ${icon('check')} Delivered
+            </button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
+              ${icon('times')} Cancel
+            </button>
+          </div>`;
       } else if (order.status === 'confirmed') {
-        actions = `<div class="flex gap-2 mt-3 flex-wrap">
-          <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
-          <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
-        </div>`;
+        actions = `
+          <div class="flex gap-2 mt-3 flex-wrap">
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
+              ${icon('check')} Delivered
+            </button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
+              ${icon('times')} Cancel
+            </button>
+          </div>`;
       }
 
       return `
@@ -196,7 +208,8 @@
             <p><strong>Address:</strong> ${order.address.line1}${order.address.line2 ? ', '+order.address.line2 : ''}</p>
             <p><strong>Shop:</strong> ${order.shop}</p>
           </div>
-          <div class="mb-4 space-y-1">${itemsHtml}
+          <div class="mb-4 space-y-1">
+            ${itemsHtml}
             <div class="flex justify-between font-bold text-xl mt-2 text-white">
               <span>Grand Total</span>
               <span>₹${order.totalAmount.toFixed(2)}</span>
@@ -208,7 +221,7 @@
 
     const applyFilter = () => {
       const cards = $$('.card');
-      let visible = 0;
+      let visibleCount = 0;
 
       cards.forEach(card => {
         const status = card.dataset.status;
@@ -220,10 +233,10 @@
         else show = true; // all
 
         card.style.display = show ? '' : 'none';
-        if (show) visible++;
+        if (show) visibleCount++;
       });
 
-      emptyEl.classList.toggle('hidden', visible > 0);
+      emptyEl.classList.toggle('hidden', visibleCount > 0);
     };
 
     const renderAll = () => {
@@ -231,22 +244,27 @@
       applyFilter();
     };
 
+    // NEW: Fetch ALL orders (not just pending)
     const fetchAllOrders = async () => {
       try {
         loadingEl.classList.remove('hidden');
-        const res = await fetch(`${API_BASE}/api/delivery-orders?limit=500`, { cache: 'no-store' });
+        const res = await fetch(`${API_BASE}/api/all-delivery-orders`, { cache: 'no-store' });
         const data = await res.json();
         loadingEl.classList.add('hidden');
 
-        if (data.success && data.orders) {
+        if (data.success && Array.isArray(data.orders)) {
+          const previousCount = allOrders.length;
           allOrders = data.orders;
+
           renderAll();
 
           // Play sound only for new pending orders
-          const newPending = data.orders.filter(o => o.status === 'pending');
-          if (newPending.length > 0) {
-            sound.currentTime = 0;
-            sound.play().catch(() => {});
+          if (allOrders.length > previousCount) {
+            const newPending = allOrders.slice(0, allOrders.length - previousCount).filter(o => o.status === 'pending');
+            if (newPending.length > 0) {
+              sound.currentTime = 0;
+              sound.play().catch(() => {});
+            }
           }
         }
       } catch (e) {
@@ -255,7 +273,7 @@
       }
     };
 
-    // Filter button click
+    // Filter buttons
     document.querySelectorAll('.filter-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         document.querySelector('.filter-btn.active')?.classList.remove('active');
@@ -272,8 +290,9 @@
 
       const orderId = btn.dataset.id;
       const newStatus = btn.dataset.action;
+      const oldText = btn.innerHTML;
       btn.disabled = true;
-      btn.innerHTML = 'Updating…';
+      btn.innerHTML = `${icon('refresh')} Updating…`;
 
       try {
         const res = await fetch(`${API_BASE}/api/update-order-status`, {
@@ -283,16 +302,15 @@
         });
         const data = await res.json();
 
-        if (data.success) {
-          const order = data.order;
-          const index = allOrders.findIndex(o => o._id === order._id);
-          if (index !== -1) allOrders[index] = order;
+        if (data.success && data.order) {
+          const index = allOrders.findIndex(o => o._id === data.order._id);
+          if (index !== -1) allOrders[index] = data.order;
           renderAll();
         }
       } catch (err) {
         alert('Update failed');
+        btn.innerHTML = oldText;
         btn.disabled = false;
-        btn.innerHTML = btn.textContent.trim();
       }
     });
 
@@ -303,7 +321,7 @@
       }
     });
 
-    // Start
+    // Start polling
     fetchAllOrders();
     setInterval(fetchAllOrders, POLL_MS);
   </script>
