--- a/delivery.html
+++ b/delivery.html
@@ -28,42 +28,51 @@
       color: var(--text);
       line-height: 1.5;
       min-height: 100vh;
+      padding-bottom: 100px;
     }
     .container { max-width: 1200px; margin: auto; padding: 1rem; }
+
     .header {
-      display: flex; justify-content: space-between; align-items: center; margin-bottom: 1rem;
+      position: sticky; top: 0; background: var(--bg); z-index: 10;
+      padding: 1rem 0; border-bottom: 2px solid var(--border);
+      display: flex; justify-content: space-between; align-items: center;
+      margin-bottom: 1rem;
     }
     .logout-btn {
-      background: var(--danger); color: white; padding: .5rem 1rem;
+      background: var(--danger); color: white; padding: .6rem 1.2rem;
       border: none; border-radius: .5rem; font-weight: 600; cursor: pointer;
-      display: flex; align-items: center; gap: .4rem; font-size: .9rem;
+      display: flex; align-items: center; gap: .4rem; font-size: .95rem;
     }
     .logout-btn:hover { background: #dc2626; }
 
-    /* FILTER TABS */
+    /* FILTER BUTTONS */
     .filter-tabs {
-      display: flex; gap: .8rem; margin-bottom: 1.5rem; flex-wrap: wrap;
-      border-bottom: 2px solid var(--border); padding-bottom: .5rem;
+      display: flex; gap: .8rem; margin: 1rem 0; flex-wrap: wrap;
+      padding: .5rem 0; overflow-x: auto; white-space: nowrap;
+      scrollbar-width: none;
     }
+    .filter-tabs::-webkit-scrollbar { display: none; }
     .filter-btn {
-      padding: .6rem 1.3rem; border: none; border-radius: .5rem;
+      padding: .7rem 1.4rem; border: none; border-radius: .6rem;
       background: #334155; color: var(--text-muted); font-weight: 600;
-      cursor: pointer; transition: all .2s; font-size: .95rem;
+      cursor: pointer; transition: all .2s; font-size: .95rem; min-width: fit-content;
     }
     .filter-btn.active {
-      background: var(--primary); color: white;
+      background: var(--primary); color: white; box-shadow: 0 0 15px rgba(59,130,246,.5);
     }
     .filter-btn:hover:not(.active) { background: #475569; }
 
+    /* CARD STYLING */
     .card {
       background: var(--card-bg); border-radius: 0.75rem;
-      box-shadow: 0 4px 12px rgba(0,0,0,.3); padding: 1.5rem;
+      box-shadow: 0 4px 15px rgba(0,0,0,.3); padding: 1.5rem;
       margin-bottom: 1rem; border: 1px solid var(--border);
-      transition: all .15s ease;
+      transition: all .2s ease;
     }
-    .card:hover { transform: translateY(-2px); box-shadow: 0 8px 20px rgba(0,0,0,.4); }
+    .card:hover { transform: translateY(-4px); box-shadow: 0 12px 25px rgba(0,0,0,.5); }
 
-    .btn { display: inline-flex; align-items: center; gap: .4rem; padding: .5rem 1rem;
+    .btn {
+      display: inline-flex; align-items: center; gap: .4rem; padding: .6rem 1.2rem;
       border: none; border-radius: .5rem; font-weight: 600; cursor: pointer;
       font-size: .9rem; transition: all .2s ease;
     }
@@ -75,8 +84,8 @@
     .btn-danger:hover { background: #dc2626; }
 
     .badge {
-      display: inline-block; padding: .25rem .6rem; font-size: .75rem;
-      border-radius: .375rem; font-weight: 600;
+      display: inline-block; padding: .3rem .8rem; font-size: .8rem;
+      border-radius: .4rem; font-weight: 700; letter-spacing: 0.5px;
     }
     .badge-pending { background: #451a03; color: #fcd34d; }
     .badge-confirmed { background: var(--confirmed); color: var(--confirmed-light); }
@@ -84,18 +93,24 @@
     .badge-cancelled { background: #7f1d1d; color: #fca5a5; }
 
     .loader {
-      border: 4px solid #1e293b; border-top: 4px solid var(--primary);
-      border-radius: 50%; width: 2.5rem; height: 2.5rem;
-      animation: spin 1s linear infinite; margin: auto;
+      border: 5px solid #1e293b; border-top: 5px solid var(--primary);
+      border-radius: 50%; width: 40px; height: 40px;
+      animation: spin 1s linear infinite; margin: 2rem auto;
     }
     @keyframes spin { to { transform: rotate(360deg); } }
 
-    .empty { text-align:center; color: var(--text-muted); margin:3rem 0; padding: 2rem; }
-    .empty svg { width:3.5rem; height:3.5rem; opacity:.3; margin-bottom:.5rem; }
+    .empty {
+      text-align: center; color: var(--text-muted); padding: 3rem 1rem;
+      font-size: 1.1rem;
+    }
+    .empty svg { width: 4rem; height: 4rem; opacity: .3; margin-bottom: 1rem; }
 
-    h1 { font-size: 1.75rem; font-weight: 700; display:flex; align-items:center; gap:.5rem; }
+    h1 { font-size: 1.8rem; font-weight: 700; display: flex; align-items: center; gap: .5rem; }
     h1 svg { color: var(--primary); }
-    .hidden { display: none !important; }
+
+    .refresh-info {
+      font-size: 0.8rem; color: var(--text for muted); text-align: center; margin-top: 1rem;
+    }
   </style>
 </head>
 <body>
@@ -110,13 +125,11 @@
 
   <div class="container">
     <div class="header">
-      <h1><svg class="icon"><use href="#i-truck"/></svg> Delivery Portal</h1>
-      <button id="logoutBtn" class="logout-btn">
-        <svg class="icon"><use href="#i-logout"/></svg> Logout
-      </button>
+      <h1>Delivery Portal</h1>
+      <button id="logoutBtn" class="logout-btn">Logout</button>
     </div>
 
-    <!-- 4 FILTER BUTTONS -->
+    <!-- FILTER BUTTONS -->
     <div class="filter-tabs">
       <button class="filter-btn active" data-filter="active">Active Orders</button>
       <button class="filter-btn" data-filter="delivered">Delivered</button>
@@ -124,26 +137,29 @@
       <button class="filter-btn" data-filter="all">All Orders</button>
     </div>
 
-    <div id="loading" class="card text-center py-10">
+    <div id="loading">
       <div class="loader"></div>
-      <p class="mt-3 text-gray-500">Loading all orders…</p>
+      <p style="text-align:center; color:#94a3b8;">Loading orders...</p>
     </div>
 
     <div id="orders-container"></div>
 
     <div id="empty" class="empty hidden">
       <svg class="icon"><use href="#i-truck"/></svg>
-      <p>No orders in this category.</p>
+      <p>No orders in this category right now.</p>
     </div>
+
+    <div class="refresh-info">Auto-refresh every 5 seconds</div>
   </div>
 
   <audio id="notificationSound" src="ringtone.mp3" preload="auto"></audio>
 
   <script>
     const API_BASE = window.location.origin;
-    const POLL_MS = 30_000;
+    const REFRESH_INTERVAL = 5000; // 5 seconds
     let allOrders = [];
     let currentFilter = 'active';
+    let previousPendingCount = 0;
 
     const $ = s => document.querySelector(s);
     const $$ = s => document.querySelectorAll(s);
@@ -163,7 +179,7 @@
 
     const renderCard = order => {
       const itemsHtml = order.items.map(i => `
-        <div class="flex justify-between text-sm text-gray-300">
+        <div class="flex justify-between text-sm text-gray-300 mt-1">
           <span>${i.name} × ${i.quantity}</span>
           <span>₹${(i.price * i.quantity).toFixed(2)}</span>
         </div>`).join('');
@@ -171,26 +187,16 @@
       let actions = '';
       if (order.status === 'pending') {
         actions = `
-          <div class="flex gap-2 mt-3 flex-wrap">
-            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">
-              ${icon('check')} Confirm
-            </button>
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
-              ${icon('check')} Delivered
-            </button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
-              ${icon('times')} Cancel
-            </button>
+          <div class="flex gap-2 mt-4 flex-wrap">
+            <button class="btn btn-primary" data-id="${order._id}" data-action="confirmed">Confirm</button>
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
           </div>`;
       } else if (order.status === 'confirmed') {
         actions = `
-          <div class="flex gap-2 mt-3 flex-wrap">
-            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">
-              ${icon('check')} Delivered
-            </button>
-            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">
-              ${icon('times')} Cancel
-            </button>
+          <div class="flex gap-2 mt-4 flex-wrap">
+            <button class="btn btn-success" data-id="${order._id}" data-action="delivered">Delivered</button>
+            <button class="btn btn-danger" data-id="${order._id}" data-action="cancelled">Cancel</button>
           </div>`;
       }
 
@@ -203,17 +209,15 @@
             </div>
             <div>${badge(order.status)}</div>
           </div>
-          <div class="mb-4 space-y-1">
+          <div class="space-y-2 text-sm">
             <p><strong>Customer:</strong> ${order.user.name} (${order.user.phone})</p>
             <p><strong>Address:</strong> ${order.address.line1}${order.address.line2 ? ', '+order.address.line2 : ''}</p>
             <p><strong>Shop:</strong> ${order.shop}</p>
           </div>
-          <div class="mb-4 space-y-1">
-            ${itemsHtml}
-            <div class="flex justify-between font-bold text-xl mt-2 text-white">
-              <span>Grand Total</span>
-              <span>₹${order.totalAmount.toFixed(2)}</span>
-            </div>
+          <div class="mt-3 space-y-1">${itemsHtml}</div>
+          <div class="flex justify-between font-bold text-xl mt-3 text-white">
+            <span>Grand Total</span>
+            <span>₹${order.totalAmount.toFixed(2)}</span>
           </div>
           ${actions}
         </div>`;
@@ -221,55 +225,45 @@
 
     const applyFilter = () => {
       const cards = $$('.card');
-      let visibleCount = 0;
-
+      let visible = 0;
       cards.forEach(card => {
         const status = card.dataset.status;
-        let show = false;
-
-        if (currentFilter === 'active') show = ['pending', 'confirmed'].includes(status);
-        else if (currentFilter === 'delivered') show = status === 'delivered';
-        else if (currentFilter === 'cancelled') show = status === 'cancelled';
-        else show = true; // all
-
+        let show = currentFilter === 'all' ||
+                   (currentFilter === 'active' && ['pending','confirmed'].includes(status)) ||
+                   (currentFilter === status);
         card.style.display = show ? '' : 'none';
-        if (show) visibleCount++;
+        if (show) visible++;
       });
-
-      emptyEl.classList.toggle('hidden', visibleCount > 0);
+      emptyEl.classList.toggle('hidden', visible > 0 || allOrders.length === 0);
     };
 
     const renderAll = () => {
       ordersContainer.innerHTML = allOrders.map(renderCard).join('');
       applyFilter();
+      window.scrollTo(0, 0); // optional: scroll to top on refresh
     };
 
-    // NEW: Fetch ALL orders (not just pending)
-    const fetchAllOrders = async () => {
+    const fetchOrders = async () => {
       try {
-        loadingEl.classList.remove('hidden');
-        const res = await fetch(`${API_BASE}/api/all-delivery-orders`, { cache: 'no-store' });
+        const res = await fetch(`${API_BASE}/api/all-delivery-orders?t=${Date.now()}`, { cache: 'no-store' });
         const data = await res.json();
-        loadingEl.classList.add('hidden');
 
         if (data.success && Array.isArray(data.orders)) {
-          const previousCount = allOrders.length;
-          allOrders = data.orders;
+          const newPending = data.orders.filter(o => o.status === 'pending').length;
 
-          renderAll();
-
-          // Play sound only for new pending orders
-          if (allOrders.length > previousCount) {
-            const newPending = allOrders.slice(0, allOrders.length - previousCount).filter(o => o.status === 'pending');
-            if (newPending.length > 0) {
-              sound.currentTime = 0;
-              sound.play().catch(() => {});
-            }
+          if (newPending > previousPendingCount && newPending > 0) {
+            sound.currentTime = 0;
+            sound.play().catch(() => {});
           }
+          previousPendingCount = newPending;
+
+          allOrders = data.orders;
+          renderAll();
         }
       } catch (e) {
-        console.error(e);
-        loadingEl.classList.add('hidden');
+        console.error("Fetch failed:", e);
+      } finally {
+        loadingEl.style.display = 'none';
       }
     };
 
@@ -286,13 +280,13 @@
     // Status update
     ordersContainer.addEventListener('click', async e => {
       const btn = e.target.closest('button[data-action]');
-      if (!btn) return;
+      if (!btn || btn.disabled) return;
 
       const orderId = btn.dataset.id;
       const newStatus = btn.dataset.action;
-      const oldText = btn.innerHTML;
+      const oldHTML = btn.innerHTML;
       btn.disabled = true;
-      btn.innerHTML = `${icon('refresh')} Updating…`;
+      btn.innerHTML = 'Updating...';
 
       try {
         const res = await fetch(`${API_BASE}/api/update-order-status`, {
@@ -302,28 +296,28 @@
         });
         const data = await res.json();
 
-        if (data.success && data.order) {
-          const index = allOrders.findIndex(o => o._id === data.order._id);
-          if (index !== -1) allOrders[index] = data.order;
+        if (data.success) {
+          const idx = allOrders.findIndex(o => o._id === data.order._id);
+          if (idx !== -1) allOrders[idx] = data.order;
           renderAll();
         }
       } catch (err) {
         alert('Update failed');
-        btn.innerHTML = oldText;
+        btn.innerHTML = oldHTML;
         btn.disabled = false;
       }
     });
 
     $('#logoutBtn').addEventListener('click', () => {
-      if (confirm('Logout?')) {
+      if (confirm('Logout from delivery portal?')) {
         localStorage.clear();
         location.href = 'login.html';
       }
     });
 
-    // Start polling
-    fetchAllOrders();
-    setInterval(fetchAllOrders, POLL_MS);
+    // Start auto-refresh every 5 seconds
+    fetchOrders();
+    setInterval(fetchOrders, REFRESH_INTERVAL);
   </script>
 </body>
 </html>
